# cmake-recipes

./: .gitignore  .gitmodules  README.md
macos-app/: Makefile  README.md
macos-app/00-osx-bundle/: CMakeLists.txt  README.md
macos-app/01-osx-bundle-fixup/: CMakeLists.txt  README.md
macos-app/02-osx-bundle-fixup2/: CMakeLists.txt  build.sh
macos-app/03-osx-bundle-fixup3/: CMakeLists.txt  README.md  build.sh  fixup_osx.cmake.in
macos-app/04-osx-dylibbundler/: CMakeLists.txt  README.md  build.sh
macos-app/demo_app/: machines.cpp  machines.hpp  main.cpp  robots.cpp  robots.hpp  vehicles.cpp  vehicles.hpp
macos-app/notes/: NOTES.md  cmake-bundling.md  cmake-cheatsheet.md  cmake-osx.md
macos-app/notes/examples/QtTest/: TestForm.cpp  TestForm.h  TestForm.ui  main.cpp
macos-app/resources/icons/: README.md  apple_alt.icns  audio_center.icns  generic_app.icns  monterey.icns  python_alt.icns  python_solarized.icns  sine_player.icns  vox_player.icns
python-extension/: CMakeLists.txt  README.md  build.sh  complex.c
scripts/: cmake_vars.py  dump_vars.cmake
